# Iron-condor

./: .env.example  .gitignore  README.md  condor strategy brief.md  pyproject.toml  requirements.txt  spy_0dte_backtest.ipynb  spy_15min_midpoint_backtest.ipynb
notebooks/: run.ipynb  start.ipynb
src/iron_condor/: __init__.py  backtest.py  cli.py  config.py  indicators.py  metrics.py  orb.py  polygon_client.py  pricing.py  strategy.py
tests/: test_indicators.py  test_orb.py  test_pricing.py  test_strategy.py
