[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iron-condor"
version = "0.1.0"
description = "SPY 0DTE long iron condor backtester"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "scipy>=1.10",
    "exchange_calendars>=4.5",
    "tqdm>=4.66",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
